<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="add_password"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_add"
        android:shortcutShortLabel="@string/shortcut_add_password_short"
        android:shortcutLongLabel="@string/shortcut_add_password_long">
        <intent
            android:action="com.downlifeblues.velora.action.ADD_PASSWORD"
            android:targetPackage="com.downlifeblues.velora"
            android:targetClass="com.downlifeblues.velora.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="generate_password"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_generate"
        android:shortcutShortLabel="@string/shortcut_generate_short"
        android:shortcutLongLabel="@string/shortcut_generate_long">
        <intent
            android:action="com.downlifeblues.velora.action.GENERATE_PASSWORD"
            android:targetPackage="com.downlifeblues.velora"
            android:targetClass="com.downlifeblues.velora.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="open_vault"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_vault"
        android:shortcutShortLabel="@string/shortcut_open_vault_short"
        android:shortcutLongLabel="@string/shortcut_open_vault_long">
        <intent
            android:action="com.downlifeblues.velora.action.OPEN_VAULT"
            android:targetPackage="com.downlifeblues.velora"
            android:targetClass="com.downlifeblues.velora.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="search_vault"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="com.downlifeblues.velora.action.SEARCH_VAULT"
            android:targetPackage="com.downlifeblues.velora"
            android:targetClass="com.downlifeblues.velora.MainActivity" />
    </shortcut>
</shortcuts>
